--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,10 @@
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:/META-INF/spring/root-context.xml</param-value>
+		<param-value>
+			classpath:/META-INF/spring/root-context.xml
+			classpath:/META-INF/spring/mybatis-config.xml
+		</param-value>
 	</context-param>
 
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
@@ -44,6 +47,10 @@
 	    <filter-name>encoding</filter-name>
 	    <url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<welcome-file-list>
+    	<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
 	
 	<!-- 에러페이지 설정 -->
 	<error-page>
